Re-pushed all files to fix background and layout issues

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 #home {
   background-color: #2E3A47;
-  background-image: url('images/IMG_20250103_020929_379.jpg'); 
+  /*background-image: url('images/IMG_20250103_020929_379.jpg'); */
   background-size: cover; 
   background-position: center center; 
   background-attachment: fixed; 
